# brainlet

./: .ctags  .gitignore  LICENSE.md  Makefile  Makefile.in  README.md  aclocal.m4  brainlet.desktop.in  configure  configure.ac  libtool  main.cpp
entity/: base_repository.cpp  base_repository.h  brain_entity.cpp  brain_entity.h  brain_repository.cpp  brain_repository.h  brains_repository.h  connection_entity.h  database_brain_repository.cpp  database_brain_repository.h  folder_brains_repository.cpp  folder_brains_repository.h  graph_repository.h  memory_repository.cpp  memory_repository.h  repository.h  search_repository.h  text_repository.h  thought_entity.h
infra/: database_module_factory.cpp  database_module_factory.h  debug_resource_provider.cpp  debug_resource_provider.h  dismissable_module.cpp  dismissable_module.h  memory_factory.cpp  memory_factory.h  module_factory.h  resource_provider.h  system_resource_provider.cpp  system_resource_provider.h
layout/: base_layout.cpp  base_layout.h  default_layout.cpp  default_layout.h  item_connection.h  item_layout.cpp  item_layout.h  scroll_area_layout.cpp  scroll_area_layout.h
model/: brain.cpp  brain.h  brain_list.cpp  brain_list.h  connection.cpp  connection.h  model.h  new_text_model.cpp  new_text_model.h  reference_entry.h  state.cpp  state.h  text_model.cpp  text_model.h  thought.cpp  thought.h
presenters/: brain_list_presenter.cpp  brain_list_presenter.h  brain_presenter.cpp  brain_presenter.h  canvas_presenter.cpp  canvas_presenter.h  connections_presenter.cpp  connections_presenter.h  dismissable_presenter.h  (+8 more)
(+90 files in other folders)
